--- a/modules/Makefile
+++ b/modules/Makefile
@@ -1,14 +1,13 @@
 .PHONY: all
-all: gist git-extras git-utils hub rename shell-utils spark vimpager
+all: gist git-extras git-sh git-up hub phpsh tig vimpager
 
 submake = make --no-print-directory -C $(1) $(2)
 sudo-submake = sudo $(call submake,$(1),$(2))
-sudo-submake-if-no-command = command -v $(1) >/dev/null 2>&1 && echo "$(1) is installed" || $(call sudo-submake,$(2),$(3))
 todo = echo "$@: TODO"
 
 .PHONY: gist
 gist:
-	@$(todo)
+	@cd $@ && rake build && sudo rake install
 
 .PHONY: git-extras
 git-extras:
@@ -22,24 +21,18 @@ git-sh:
 git-up:
 	@$(todo)
 
-.PHONY: git-utils
-git-utils:
-	@$(todo)
-
 .PHONY: hub
 hub:
-	@cd hub && sudo rake install
+	@cd hub && rake standalone && sudo rake install
 
 .PHONY: phpsh
 phpsh:
-	@cd phpsh && sudo python setup.py build
-	@cd phpsh && sudo python setup.py install
+	@cd phpsh && sudo python setup.py build && sudo python setup.py install
 
 .PHONY: tig
 tig:
-	@cd tig && make
-	@cd tig && sudo make install
+	@cd tig && make all && sudo make install
 
 .PHONY: vimpager
 vimpager:
-	@$(call sudo-submake-if-no-command,$@,$@,install)
+	@$(call sudo-submake,$@,install)
