--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -5,6 +5,7 @@
 [profiles]
   [[default]]
     background_image = None
+    scrollback_lines = 10000
     scroll_on_output = False
 [layouts]
   [[default]]
