--- a/.gitmodules
+++ b/.gitmodules
@@ -26,6 +26,10 @@
 	path = modules/git-up
 	url = https://github.com/aanand/git-up.git
 	branch = master
+[submodule "modules/git-wt-commit"]
+	path = modules/git-wt-commit
+	url = git://gitorious.org/willgit/mainline.git
+	branch = master
 [submodule "modules/hub"]
 	path = modules/hub
 	url = git://github.com/defunkt/hub.git
@@ -57,8 +61,4 @@
 [submodule "modules/vimpager"]
 	path = modules/vimpager
 	url = git://github.com/rkitover/vimpager.git
-	branch = master
-[submodule "modules/git-wt-commit"]
-	path = modules/git-wt-commit
-	url = git://gitorious.org/willgit/mainline.git/
 	branch = master
