Changed HTTPS protocol to GIT

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	branch = master
 [submodule "modules/gist"]
 	path = modules/gist
-	url = https://github.com/defunkt/gist.git
+	url = git://github.com/defunkt/gist.git
 	branch = master
 [submodule "modules/git-extras"]
 	path = modules/git-extras
@@ -24,7 +24,7 @@
 	branch = master
 [submodule "modules/git-up"]
 	path = modules/git-up
-	url = https://github.com/aanand/git-up.git
+	url = git://github.com/aanand/git-up.git
 	branch = master
 [submodule "modules/git-wt-commit"]
 	path = modules/git-wt-commit
@@ -44,7 +44,7 @@
 	branch = master
 [submodule "modules/phpsh"]
 	path = modules/phpsh
-	url = https://github.com/facebook/phpsh.git
+	url = git://github.com/facebook/phpsh.git
 	branch = master
 [submodule "modules/rename"]
 	path = modules/rename
@@ -56,7 +56,7 @@
 	branch = master
 [submodule "modules/tig"]
 	path = modules/tig
-	url = https://github.com/jonas/tig.git
+	url = git://github.com/jonas/tig.git
 	branch = master
 [submodule "modules/vimpager"]
 	path = modules/vimpager
