--- a/home/config/sublime-text-3/Packages/User/.gitignore
+++ b/home/config/sublime-text-3/Packages/User/.gitignore
@@ -3,10 +3,15 @@
 ## @file   ~/.config/sublime-text-3/Packages/User/.gitignore
 #\
 
+# GoSublime
 /GoSublime/
 /GoSublime-aux.sublime-settings
+
+# Package Control
 /Package Control.cache/
 /Package Control.ca-bundle
 /Package Control.ca-list
 /Package Control.last-run
+
+# Other
 /Side Bar.sublime-settings
