Enabled infinite scrollback

--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -6,6 +6,7 @@
     scrollback_lines = 10000
     scroll_on_output = False
     background_image = None
+    scrollback_infinite = True
 [layouts]
   [[default]]
     [[[child1]]]
