--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -13,6 +13,7 @@
     [[[child1]]]
       type = Terminal
       parent = window0
+      profile = default
     [[[window0]]]
       type = Window
       parent = ""
