Revert "Fix `aptitude` config"
This reverts commit deacc0d60b1f54453feec7391ce88cc0eaa61668.

--- a/home/aptitude/config
+++ b/home/aptitude/config
@@ -1,16 +1,9 @@
 #/
-## Configuration file for {@link http://wiki.debian.org/Apt apt}.
+## Configuration file for aptitude.
 #\
 
-Apt {
+Aptitude {
     Autoclean-After-Update "true";
     Auto-Install "true";
     Install-Recommends "true";
-}
-
-APT::Get {
-    Assume-Yes "true";
-    AutomaticRemove "true";
-    Install-Recommends "true";
-    Install-Suggests "true";
 }
