Added `make` rule for `git-up`

--- a/modules/Makefile
+++ b/modules/Makefile
@@ -24,7 +24,7 @@ git-sh:
 
 .PHONY: git-up
 git-up:
-	@$(todo)
+	@cd git-up && gem build git-up.gemspec && gem install git-up-*.gem
 
 .PHONY: git-wt-commit
 git-wt-commit:
