--- a/.gitmodules
+++ b/.gitmodules
@@ -23,10 +23,6 @@
 	url = git://github.com/aanand/git-up.git
 	branch = master
     ignore = dirty
-[submodule "modules/git-wt-commit"]
-	path = modules/git-wt-commit
-	url = git://gitorious.org/willgit/mainline.git
-	branch = master
 [submodule "modules/hub"]
 	path = modules/hub
 	url = git://github.com/defunkt/hub.git
@@ -63,3 +59,7 @@
 	path = modules/whenever
 	url = https://github.com/javan/whenever.git
 	branch = master
+[submodule "modules/willgit"]
+    path = modules/willgit
+    url = git://gitorious.org/willgit/mainline.git
+    branch = master
