--- a/home/vagrant.d/Vagrantfile
+++ b/home/vagrant.d/Vagrantfile
@@ -1,5 +1,5 @@
-Vagrant.require_plugin 'vagrant-vbguest'
-
 Vagrant.configure('2') do |config|
-  config.vbguest.no_install = true
+  if Vagrant.has_plugin?('vagrant-vbguest')
+    config.vbguest.no_install = true
+  end
 end
