Warn if the `vagrant-cachier` plugin is not installed.

--- a/home/vagrant.d/Vagrantfile
+++ b/home/vagrant.d/Vagrantfile
@@ -1,3 +1,7 @@
+unless Vagrant.has_plugin?('vagrant-cachier')
+  puts 'You should install the `vagrant-cachier` plugin.'
+end
+
 unless Vagrant.has_plugin?('vagrant-vbguest')
   puts 'You should install the `vagrant-vbguest` plugin.'
 end
