Use NFS for `vagrant-cachier` plugin.

--- a/home/vagrant.d/Vagrantfile
+++ b/home/vagrant.d/Vagrantfile
@@ -7,6 +7,12 @@ unless Vagrant.has_plugin?('vagrant-vbguest')
 end
 
 Vagrant.configure('2') do |config|
+  if Vagrant.has_plugin?('vagrant-cachier')
+    config.cache.synced_folder_opts = {
+      type: :nfs,
+    }
+  end
+
   if Vagrant.has_plugin?('vagrant-vbguest')
     config.vbguest.no_install = true
   end
