--- a/home/vagrant.d/Vagrantfile
+++ b/home/vagrant.d/Vagrantfile
@@ -8,6 +8,7 @@ end
 
 Vagrant.configure('2') do |config|
   if Vagrant.has_plugin?('vagrant-cachier')
+    config.cache.scope = :box
     config.cache.synced_folder_opts = {
       type: :nfs,
     }
