--- a/home/vagrant.d/Vagrantfile
+++ b/home/vagrant.d/Vagrantfile
@@ -18,6 +18,12 @@ Vagrant.configure('2') do |config|
     }
   end
 
+  if Vagrant.has_plugin?('vagrant-hostmanager')
+    config.hostmanager.enabled = true
+    config.hostmanager.manage_host = true
+    config.hostmanager.include_offline = true
+  end
+
   if Vagrant.has_plugin?('vagrant-vbguest')
     config.vbguest.no_install = true
   end
