Set a default `IdentityFile` for Freelancer hosts.

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -14,6 +14,9 @@
 ## @}}}
 
 ## Freelancer @{{{
+    Host *.freelancer.com
+        IdentityFile ~/.ssh/freelancer.com
+
     Host git.freelancer.com gitlab.freelancer.com
         HostName git.freelancer.com
         User git
