Add Jenkins slave hosts to SSH configuration.

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -54,6 +54,26 @@
         User ubuntu
         IdentityFile ~/.ssh/freelancer.com
 
+    Host jenkins-slave1.freelancer.com
+        HostName ec2-107-22-128-111.compute-1.amazonaws.com
+        User ubuntu
+        IdentityFile ~/.ssh/freelancer.com
+
+    Host jenkins-slave2.freelancer.com
+        HostName ec2-54-221-179-195.compute-1.amazonaws.com
+        User ubuntu
+        IdentityFile ~/.ssh/freelancer.com
+
+    Host jenkins-slave3.freelancer.com
+        HostName ec2-50-19-64-78.compute-1.amazonaws.com
+        User ubuntu
+        IdentityFile ~/.ssh/freelancer.com
+
+    Host jenkins-slave4.freelancer.com
+        HostName ec2-54-196-13-67.compute-1.amazonaws.com
+        User ubuntu
+        IdentityFile ~/.ssh/freelancer.com
+
     ## Office @{{{
         Host josh.syd.local
             HostName josh.syd.local
