Add Phabricator hosts to SSH configuration.

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -49,6 +49,16 @@
         User ubuntu
         IdentityFile ~/.ssh/freelancer.com
 
+    Host phabricator.freelancer.com
+        HostName phabricator.freelancer.com
+        User josh
+        IdentityFile ~/.ssh/freelancer.com
+
+    Host phabricator-worker.freelancer.com
+        HostName ec2-54-234-71-144.compute-1.amazonaws.com
+        User josh
+        IdentityFile ~/.ssh/freelancer.com
+
     Host jenkins-master.freelancer.com
         HostName ec2-107-22-46-201.compute-1.amazonaws.com
         User ubuntu
