--- a/home/vagrant.d/Vagrantfile
+++ b/home/vagrant.d/Vagrantfile
@@ -1,3 +1,7 @@
+unless Vagrant.has_plugin?('vagrant-aws')
+  puts 'You should install the `vagrant-aws` plugin.'
+end
+
 unless Vagrant.has_plugin?('vagrant-hostmanager')
   puts 'You should install the `vagrant-hostmanager` plugin.'
 end
