Set username for `*.freelancer.com` hosts to `josh`

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -18,6 +18,7 @@ Host secure.phabricator.com
     PubkeyAuthentication yes
 
 Host *.freelancer.com
+    User josh
     IdentityFile ~/.ssh/keys/freelancer.com
 
 Host git.freelancer.com gitlab.freelancer.com
