Update installation process for `whenever`

--- a/modules/Makefile
+++ b/modules/Makefile
@@ -2,6 +2,7 @@
 all: gist git-extras git-sh git-up git-wt-commit hub rename tig vimpager whenever
 
 submake = make --no-print-directory -C $(1) $(2)
+subrake = cd $(1) && bundle install && bundle exec rake $(2)
 sudo-install = sudo install -t /usr/local/bin $(foreach source,$(2),$(1)/$(source))
 sudo-submake = sudo $(call submake,$(1),$(2))
 todo = echo "$@: TODO"
@@ -44,5 +45,5 @@ vimpager:
 
 .PHONY: whenever
 whenever:
-	@cd $@ && bundle install && bundle exec rake build install
+	@$(call subrake,$@,install)
 
