Use a module for rake completion

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,3 +51,6 @@
 	path = modules/willgit
 	url = git://gitorious.org/willgit/mainline.git
 	branch = master
+[submodule "modules/rake-completion"]
+	path = modules/rake-completion
+	url = https://github.com/ai/rake-completion.git
