Simplify installation process for `whenever`

--- a/modules/Makefile
+++ b/modules/Makefile
@@ -1,5 +1,5 @@
 .PHONY: all
-all: git-extras git-sh git-up git-wt-commit rename tig vimpager whenever
+all: git-extras git-sh git-up git-wt-commit rename tig vimpager
 
 submake = make --no-print-directory -C $(1) $(2)
 subrake = cd $(1) && bundle install && bundle exec rake $(2)
@@ -34,8 +34,3 @@ tig:
 .PHONY: vimpager
 vimpager:
 	@$(call submake,$@)
-
-.PHONY: whenever
-whenever:
-	@$(call subrake,$@,install)
-
