--- a/etc/Makefile
+++ b/etc/Makefile
@@ -1,4 +1,4 @@
 SELF_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 
 apt-sources:
-	ln -s $(SELF_DIR)/apt/sources.list.d /etc/apt/
+	ln --symbolic --force $(SELF_DIR)/apt/sources.list.d /etc/apt/sources.list.d
