--- a/etc/Makefile
+++ b/etc/Makefile
@@ -1,4 +1,5 @@
 SELF_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 
 apt-sources:
-	ln --symbolic --force $(SELF_DIR)/apt/sources.list.d /etc/apt/sources.list.d
+	rm --recursive --force /etc/apt/sources.list.d
+	ln --symbolic --force $(SELF_DIR)/apt/sources.list.d /etc/apt/
